# robots-factory

./: .gitignore  CMakeLists.txt  arm.lua  imgui.ini  robot_old.lua  robot_old.yml  utils.lua  vcpkg.json  world.yml
lustre/: CMakeLists.txt
lustre/lib/: lib.cpp  lib.h  lib_types.h  pervasives.h
lustre/spider/: build.sh  lib.epi  robot.cpp  robot.ept
lustre/spider/robot_c/: robot.c  robot.h  robot_types.c  robot_types.h
lustre/spider2/: build.sh  copy.ept  lib.epi  robot.cpp  robot.ept
lustre/spider2/robot_c/: robot.c  robot.h  robot_types.c  robot_types.h
robots/arm-4dof/: robot.lua  robot.yml
robots/simple-humanoid/: robot.lua  robot.yml
robots/spider/: robot.json  robot.lua  robot.yml
src/: application.cpp  application.hpp  base_application.cpp  base_application.hpp  eui.cpp  eui.hpp  file_watcher.cpp  file_watcher.hpp  main.cpp  parser_utils.hpp  shared_library.cpp  shared_library.hpp
src/draw/: renderer_2d.cpp  renderer_2d.hpp  shader.cpp  shader.hpp
src/parts/: accuracy.hpp  joint.cpp  joint.hpp  part.cpp  part.hpp  part_manager.cpp  part_manager.hpp  sensor.cpp  sensor.hpp  shape.cpp  shape.hpp
src/robot/: lua_robot_ai.cpp  lua_robot_ai.hpp  physics_robot.cpp  physics_robot.hpp  robot.cpp  robot.hpp  robot_ai.cpp  robot_ai.hpp  robot_inspector_ui.cpp  robot_inspector_ui.hpp  robot_parser.cpp  robot_parser.hpp  robot_saver.cpp  robot_saver.hpp
src/simulation/: simulation.cpp  simulation.hpp  simulation_view.cpp  simulation_view.hpp  world_description.cpp  world_description.hpp
